--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
-
+body {
+  background-image: url("bg_lp.jpeg");
+}
 .form-login {
   width: 50vw !important;
   float: right;
@@ -20,4 +22,27 @@
 .accordion-button {
   background-color: #333;
   color: white;
+}
+
+.accordion-button[aria-expanded="true"] {
+  background-color: #222;
+  color: white;
+}
+.login-icon {
+  margin-right: 10px;
+}
+.accordion-collapse {
+  padding: 15px;
+}
+.container-forms {
+  margin-top: 25px;
+}
+.dp_title {
+  color: white;
+  text-align: center;
+  margin-top: 20vh;
+ /** transform: translateY(-50%); **/
+  background-color: rgba(20, 20, 20, 0.6);
+  padding: 5px;
+  border-radius: 15px;
 }
